# glean

./: .gitignore  CHANGES  COPYRIGHT  JOBS
doc/html/: build.html  buildcmake.html  buildgnu.html  buildscons.html  buildwin.html  changes.html  cleanup.html  index.html  newfeat.html  newtest.html  next.html  overview.html  port.html  repo.html  run.html  state.html  whatis.html
doc/sgml/: Makefile  glean.sgml
make/: app.mak  common.mak  common.win  dep.mak  h.mak  lib.mak  null.mak  template.mak  test.mak
results/X_Mesa_3_0/basic/: results
results/X_Mesa_3_0/blendFunc/: results
results/X_Mesa_3_0/getString/: results
results/X_Mesa_3_0/rgbTriStrip/: i001.tif
results/X_Mesa_3_0/texBindPerf/: results
src/: CMakeLists.txt  Makefile  SConscript  SConstruct  makefile.win
src/glean/: .cvsignore  CMakeLists.txt  Makefile  SConscript  codedid.cpp  codedid.h  dsurf.cpp  dsurf.h  environ.cpp  environ.h  geomrend.cpp  geomrend.h  geomutil.cpp  geomutil.h  glutils.cpp  glutils.h  main.cpp  makefile.win  misc.cpp  misc.h  options.cpp  options.h  rc.cpp  rc.h  tapi2.cpp  tapi2.h  tbase.h  tbasic.cpp  tbasic.h  tbasicperf.cpp  tbasicperf.h  tbinding.cpp  tbinding.h  tblend.cpp  tblend.h  tbufferobject.cpp  tchgperf.cpp  tchgperf.h  tclipflat.cpp  tclipflat.h  (+64 more)
src/glh/: Makefile  glwrap.h  makefile.win
src/libs/: CMakeLists.txt  Makefile  SConscript  makefile.win
src/libs/dsurf/: CMakeLists.txt  Makefile  SConscript  dsconfig.cpp  dsconfig.h  dsfilt.cpp  makefile.win
src/libs/image/: CMakeLists.txt  Makefile  SConscript  image.h  makefile.win  reg.cpp
src/libs/lex/: CMakeLists.txt  Makefile  SConscript  makefile.win
src/libs/rand/: Makefile  makefile.win
src/libs/stats/: CMakeLists.txt  Makefile  SConscript  makefile.win  stats.h
src/libs/timer/: CMakeLists.txt  Makefile  SConscript  makefile.win  perf.cpp  perf.h  timer.cpp  timer.h
src/tiff/: CMakeLists.txt  SConscript  tif_config.h.in  tiffconf.h.in
src/tools/: CMakeLists.txt  Makefile  SConscript  makefile.win
src/tools/difftiff/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  SConscript  main.cpp  makefile.win
src/tools/showtiff/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  SConscript  main.cpp  makefile.win
src/tools/showvis/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  SConscript  main.cpp  makefile.win
